[field] Fix spacing between GroupChange blocks

--- a/packages/@sanity/field/src/diff/components/GroupChange.css
+++ b/packages/@sanity/field/src/diff/components/GroupChange.css
@@ -1,9 +1,7 @@
 @import 'part:@sanity/base/theme/variables-style';
 
 .groupChange {
-  @nest div + & {
-    margin-top: var(--extra-large-padding);
-  }
+  margin-top: var(--extra-large-padding);
 }
 
 .changeList {
